--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 
 :root {
-    /* --cor-primaria: #232324;
-    --cor-secundaria: #FDFFFC;
-    --cor-terciaria: #06AED5; */
     --cor-primaria: #354649;
     --cor-secundaria: #E0E7E9;
     --cor-terciaria: #A3C6C4;
@@ -27,7 +24,7 @@ body {
 }
 
 .cabecalho {
-    padding: 2% 0 0 15%;
+    padding: 2% 0 0 7%;
 }
 
 .cabecalho__menu {
@@ -38,27 +35,46 @@ body {
 .cabecalho__menu__link {
     font-family: var(--fonte-secundaria);
     font-weight: 600;
-    font-size: 18px;
+    font-size: 1.12rem;
     color: var(--cor-terciaria);
     text-decoration: none;
+    position: relative;
+}
+
+.cabecalho__menu__link::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    z-index: -1;
+    background-color: var(--cor-primaria);
+    transition: height .25s linear;
+}
+
+.cabecalho__menu__link:hover::before {
+    height: 100%;
 }
 
 .apresentacao {
-    padding: 7% 15%;
+    padding: 7% 7%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
+
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 
@@ -67,7 +83,7 @@ body {
 }
 
 .apresentacao__conteudo__texto {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
 }
 
@@ -82,19 +98,19 @@ body {
 .apresentacao__links__subtitulo {
     font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 18px;
+    font-size: 1.12rem;
 }
 
-.apresentacao__links__link {
+.apresentacao__links__redes {
     display: flex;
     justify-content: center;
     gap: 16px;
     text-align: center;
     border: 1px solid var(--cor-terciaria);
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 21.5px 0;
-    width: 378px;
+    width: 50%;
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
@@ -107,11 +123,9 @@ body {
     opacity: 0.7;
 }
 
-.imagem-capa {
+.apresentacao__imagem {
     filter: grayscale(0.95);
-    border-radius: 8px;
-    max-width: 593;
-    width: auto;
+    width: 35%;
 }
 
 .rodape {
@@ -120,6 +134,20 @@ body {
     padding: 24px;
     text-align: center;
     font-family: var(--fonte-secundaria);
-    font-size: 18px;
+    font-size: 1.12rem;
     font-weight: 400;
+}
+
+@media (max-width: 1000px) {
+    .cabecalho {
+        padding: 10%;
+    }
+
+    .cabecalho__menu {
+        justify-content: center;
+    }
+    
+    .apresentacao {
+        flex-direction: column-reverse;
+    }
 }
