--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 
 :root {
-    --cor-primaria: #354649;
+    --cor-primaria: #232324;
     --cor-secundaria: #E0E7E9;
     --cor-terciaria: #A3C6C4;
+    --cor-quaternaria: #354649;
 
     --fonte-primaria: 'Krona One', sans-serif;
     --fonte-secundaria: 'Montserrat', sans-serif;
@@ -20,7 +21,6 @@ body {
     box-sizing: border-box;
     color: var(--cor-secundaria);
     background: var(--cor-primaria);
-    background: linear-gradient(145deg, #232324 53%, #191978 65%, #79b2be 100%);
 }
 
 .cabecalho {
@@ -49,7 +49,7 @@ body {
     width: 100%;
     height: 0;
     z-index: -1;
-    background-color: var(--cor-primaria);
+    background-color: var(--cor-quaternaria);
     transition: height .25s linear;
 }
 
@@ -70,11 +70,11 @@ body {
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 100px;
 }
 
 .apresentacao__conteudo__titulo {
-    font-size: 2.25rem;
+    font-size: 3rem;
     font-family: var(--fonte-primaria);
 }
 
@@ -85,6 +85,7 @@ body {
 .apresentacao__conteudo__texto {
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
+    line-height: 1.5;
 }
 
 .apresentacao__links {
@@ -138,7 +139,7 @@ body {
     font-weight: 400;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 720px) {
     .cabecalho {
         padding: 10%;
     }
@@ -152,7 +153,17 @@ body {
         padding: 5%;
     }
 
+
+    .apresentacao__conteudo__titulo{
+        font-size: 2.25rem;
+    }
+
     .apresentacao__conteudo {
         width: auto;
     }
+
+    .apresentacao__links__redes {
+        width: 100%;
+    }
+
 }
