--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,7 @@ body {
     color: var(--cor-terciaria);
     text-decoration: none;
     position: relative;
+    padding: .4em 1.5em;
 }
 
 .cabecalho__menu__link::before {
@@ -50,7 +51,7 @@ body {
     height: 0;
     z-index: -1;
     background-color: var(--cor-quaternaria);
-    transition: height .25s linear;
+    transition: height .20s linear;
 }
 
 .cabecalho__menu__link:hover::before {
@@ -70,7 +71,7 @@ body {
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 70px;
 }
 
 .apresentacao__conteudo__titulo {
